--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 #->Prelang (env_variables:dotenv)
 # Ignore .env file so sensitive environment variables are not checked into Git.
 .env
+.rvmrc
 
 config/settings.local.yml
 config/settings/*.local.yml
